...

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/pelicula"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="151dp"
...

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textView_nombrePelicula"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/nombre_pelicula"
                        android:textSize="18sp"
                        android:textStyle="bold" />
...
