<?xml version="1.0" encoding="utf-8"?>
<ListView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categories_movieslist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity_pelisDeUnaCategoria"
    tools:listitem="@layout/peliculaslistcontent" />