<resources>
    <string name="app_name">Fandomovies</string>
    <string name="boton_iniciar_sesion">Iniciar Sesión</string>
    <string name="boton_registrarme">Registrarme</string>
    <string name="password_hint">Contraseña</string>
    <string name="numero_de_movil_email_hint">Número de móvil o Email</string>
    <string name="numero_de_movil_hint">Número de móvil</string>
    <string name="nombre_apellidos_hint">Nombre y apellidos</string>
    <string name="nombre_app">Fandomovies</string>
    <string name="registrate_boton">¿No tienes una cuenta? Regístrate.</string>
    <string name="iniciadoCorrecto">Ha iniciado sesión.</string>
    <string name="peliculas">Peliculas</string>
    <string name="credencialesIncorrectasTitle">Credenciales incorrectas</string>
    <string name="credencialesIncorrectas">Los datos que ha introducido no son correctos o la cuenta no existe</string>
    <string name="camposporRellenarTitle">Faltan campos por rellenar</string>
    <string name="camposporRellenar">Rellene todos los campos para poder registrarse</string>
    <string name="emailYaEnUsoTitle">Email en uso</string>
    <string name="emailYaEnUso">Esta dirección de email ya está en uso</string>
    <string name="numMovilYaEnUso">Este número de móvil ya tiene una cuenta registrada</string>
    <string name="numMovilYaEnUsoTitle">Número de móvil en uso</string>
    <string name="inicia_sesion">¿Ya tienes una cuenta? Inicia Sesión.</string>
    <string name="categoria_elegida">Categoria 1</string>
    <string name="tab_numero">Número de móvil</string>
    <string name="tab_email">Email</string>
    <string name="series">Series</string>
    <string name="documentaries">Documentales</string>
    <string name="movies">Películas</string>
    <string name="logo_registro">Logo de registro</string>
    <string name="buscarpeli">Buscar película</string>
    <string name="peli">Películas</string>
    <string name="buscarserie">Buscar serie</string>
    <string name="buscarLupa">Buscar</string>
    <string name="buscardocums">Buscar documental</string>
    <string name="documentales">Documentales</string>
    <string name="titulo">Título</string>
    <string name="carrito">carrito</string>
    <string name="heart">heart like</string>
    <string name="director">Director/a y Año de publicación</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="menu">Menú</string>
    <string name="serie">SERIE</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="item_category">CATEGORÍA</string>
    <string name="infocuenta">Información de la cuenta</string>
    <string name="infocuenta3">Email o número de móvil</string>
    <string name="deseaCerrarSesion">¿Desea cerrar la sesión actual? Cerrar Sesión.</string>
    <string name="seguroCerrarSesion">¿Está segur@ de que desea cerrar la sesión?</string>
    <string name="cerrarsesiontitle">Cerrar Sesión</string>
    <string name="ayuda_text">Ayuda</string>
    <string name="compras">Compras</string>
    <string name="flecha_back">Flecha de back</string>




    <string-array name="prefijosMovil">
        <item>+34</item>
        <item>+48</item>
        <item>+49</item>
        <item>+26</item>
        <item>+25</item>
    </string-array>


    <string name="action_settings">Settings</string>
    <string name="button_trailer">Ver tráiler</string>
    <string name="nombre_pelicula">PELÍCULA</string>
    <string name="nombre_docu">DOCUMENTAL</string>
    <string name="fecha_pelicula">Fecha</string>
    <string name="fecha_serie">Fecha</string>
    <string name="fecha_docu">Fecha</string>
    <string name="descripcion">Descripcion</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="sinopsis_contenido">Prueba de texto para ver el texto en el TextView salta de linea para ajustar el contenido</string>
    <string name="reparto">Reparto</string>
    <string name="nombre_actor_pelicula">Actor Pelicula</string>
    <string name="nombre_actor_serie">Actor Serie</string>
    <string name="nombre_actor_docu">Actor Documental</string>
    <string name="valoraciones">Valoraciones</string>
    <string name="ver_reparto_completo">Ver el reparto completo >></string>
    <string name="_5_estrellas">5 estrellas</string>
    <string name="valoracion_nombre">Usuario</string>
    <string name="ver_valoraciones_completo">Ver todas las valoraciones >></string>
    <string name="buscarItem">Buscar</string>
    <string name="favoritos">Favoritos</string>
    <string name="nohayFavs">Todavía no hay favoritos.</string>
    <string name="eliminarFavTitle">Eliminar favorito</string>
    <string name="eliminarFav">¿Desea eliminar este elemento de la lista de Favoritos?</string>
    <string name="siDelete">Eliminar</string>
    <string name="no">No</string>
    <string name="siCerrarSesion">Sí</string>
    <string name="añadirfavoritotitulo">Añadir a favoritos</string>
    <string name="añadirfavorito">¿Desea añadir este elemento a la lista de Favoritos?</string>
    <string name="siFav">Añadir</string>
    <string name="registradoConExito">Registrado con éxito.</string>
    <string name="siWarning">Okay</string>
    <string name="añadidoConExito">Se ha añadido a la lista de Favoritos</string>
    <string name="realizarcompratitulo">Realizar compra</string>
    <string name="realizarcompra">¿Quiere obtener productos acerca de esta película?</string>
    <string name="siComprar">Comprar</string>
    <string name="borrarItem">Borrar</string>
    <string name="eliminarComprasTitle">Eliminar historial de Compras</string>
    <string name="eliminarCompras">¿Desea eliminar la lista de Compras?</string>
    <string name="realizarcompraSerie">¿Quiere obtener productos acerca de esta serie?</string>
    <string name="realizarcompraDocu">¿Quiere obtener productos acerca de este documental?</string>
    <string name="usuario_de_prueba">fandomovie@ulpgc.es</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="nav_drawer_open">Nav open</string>
    <string name="nav_drawer_close">Nav close</string>
    <string name="inicio">Inicio</string>
    <string name="yaestainicio">Ya está en Inicio</string>
    <string name="yaestamiperfil">Ya está en Mi Perfil</string>
    <string name="yaestacompras">Ya está en Compras</string>
    <string name="yaestafavs">Ya está en Favoritos</string>
    <string name="yaestaayuda">Ya está en Ayuda</string>





    <array name="corazon_favs">
        <item>@drawable/favoritonegro</item>
    </array>
    <array name="carro_compras">
        <item>@drawable/carrito</item>
    </array>
    <array name="delete_favs">
        <item>@drawable/delete</item>
    </array>

</resources>