<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categories_serieslist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".categoriasPelis.CategoryListActivity"
    tools:listitem="@layout/activity_categorias_de_serieslistacontent" />